hphp/test/slow/memory/oom_does_not_oom_shutdown_handler.php.expectf

Fatal error: request has exceeded memory limit in %s/hphp/test/slow/memory/oom_does_not_oom_shutdown_handler.php on line 11
IN SHUTDOWN
